Initial work on adding external node genes to network genome